# GPTme

./: .gitignore  GPTme_Colab.ipynb  README.md  config.py  doc_loader.py  llama_cpp_deploy.py  llama_cpp_setup.sh  load_model.py  load_sourcedocs.py  load_webpage.py  ollama_setup.sh  prompt_config.py  pyproject.toml  rag_chain.py  requirements.txt  requirments.txt  setup.sh
Examples/: crag_example.py
Examples/notebooks/: GPTme_CRAG_terminal_app.ipynb  GPTme_Colab.ipynb  Running_LlamaCPP_in_Colab_GPU.ipynb  Running_Ollama_Colab.ipynb
GPTme/: config.py  prompt_config.py
GPTme/agents/: Agentstools.py  agents.json  crewagent.py
GPTme/ingest/: database.py  doc_loader.py  load_sourcedocs.py  load_webpage.py
GPTme/llms/: hf_load_model.py  load_model.py  ollama_load_model.py
GPTme/pipes/: crag.py  llama_cpp_deploy.py  local_crag.py  local_crag_websearch.py  rag_chain.py
GPTme/streamlit_app/: chatbot_app.py  crag_app.py  rag_app.py
GPTme/whisper/: pyannote.py  whisper_load_run.py
src/ingest/: doc_loader.py  load_sourcedocs.py
src/llm/: load_model.py
src/pipes/: crag.py  rag_chain.py
