[build-system]
requires = [
  "setuptools",
  "langchain_core",
  "bs4",
  "concurrent",
  "chromadb",
  "huggingface_hub",
  "langchain",
  "langchain_community",
  ]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project]
name = "GPTme"
version = "0.0.1"
authors = [
  { name="Shalva Mist"},
]
